   * Add shortcuts for extending to line before/after - thx Flitskikker
   * Line width pixels in main-win/syntax-validation/statistics - thx Flitskikker
   * Add "snap to scene change" option for waveform - thx Flitskikker
   * Add FCE rule about commas - thx Jamakmake/OmrSi
   * Add new subtitle format - thx Marko
   * Add new subtitle format - thx José
   * Add new subtitle format - thx Bersu
   * Add support for pasting file from clipboard in list view - thx 5j9
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Finnish translation - thx Teijo S
   * Update Korean translation - thx domddol
   * Update Brazilian translation - thx Igor
   * Update Greek translation - thx Lero91
   * Update Dutch translation - thx xylographe/Flitskikker
   * Update Portuguese translation - thx moob
   * Update Tesseract version 4.1.1 to "5 Alpha 2020-03-28" 
   * Make shortcuts F4-F12 customizable
   * Minor UI improvements for "Batch convert" UI
   * Improve "Fix unneeded periods" - thx Aleksander
   * Improve "Remove unneeded spaces" - thx Aleksander
   * Keep properties between ASSA/SSA - thx DKqwerty
   * Improve handling of alignment tags in "Merge lines" - thx Moisés
   * Improve parsing of unknown subtitles - thx Marko
   * Update Serbian spell check dictionary - thx arslan
   * Display version in VLC player name
   * Add text edit box to remove text for HI - thx Raistlin
   * Improve English OCR fixes slightly - thx tormento  
   * Properly align gridlines with time ticks - thx Flitskikker
   * Add setting for split behavior - thx Flitskikker
   * Add option for single click select - thx Flitskikker
   * Add scene change snapping - thx Flitskikker
   * Improve "Remove unneeded spaces" for Arabic - thx OmrSi
   * Improve "Fix missing spaces" for Arabic - thx OmrSi
   * Read TTML 1.0 even if starts with garbage - thx slimozis
   * Try to make "missing codec error" more user-friendly
   * Add "Actor" to "Modify selection" for ASS/SSA